--- a/deb/enterprisestoragebox/debian/changelog
+++ b/deb/enterprisestoragebox/debian/changelog
@@ -715,7 +715,7 @@ openmediavault (2.1.18) stable; urgency=low
   * Mantis 0000472: Add ability to configure notifications.
   * Mantis 0000634: Provide a way to see changelogs of available package
     upgrades before installing.
-  * Mantis 0000661: Rsync server on OpenMediaVault does not send user/group
+  * Mantis 0000661: Rsync server on EnterpriSestorageBox does not send user/group
     info.
   * Update locales.
   * Fix various bugs in WebGUI.
@@ -891,7 +891,7 @@ openmediavault (2.1.18) stable; urgency=low
   * Mantis 0000416: Remove possibility to wipe system disk
   * Mantis 0000417: Undefined variable: sfobject
 
- -- Volker Theile <volker.theile@openmediavault.org>  Wed, 18 Apr 2012 20:06:43 +0200
+ -- Artur Osinski-Stachowicz <volker.theile@openmediavault.org>  Wed, 18 Apr 2012 20:06:43 +0200
 
 openmediavault (0.3) stable; urgency=low
 
@@ -911,14 +911,14 @@ openmediavault (0.3) stable; urgency=low
   * Mantis 0000410: SMART informations are not displayed for SCSI disks
   * Mantis 0000412: Log Viewer should display and sort logs in correct order
 
- -- Volker Theile <volker.theile@openmediavault.org>  Sat, 07 Jan 2012 14:30:55 +0100
+ -- Artur Osinski-Stachowicz <volker.theile@openmediavault.org>  Sat, 07 Jan 2012 14:30:55 +0100
 
 openmediavault (0.2.7.3) stable; urgency=low
 
   * Mantis 0000395: The Upgrade Manager does not show all Packages that
     would be upgraded/installed
 
- -- Volker Theile <volker.theile@openmediavault.org>  Sun, 18 Mar 2012 23:01:08 +0100
+ -- Artur Osinski-Stachowicz <volker.theile@openmediavault.org>  Sun, 18 Mar 2012 23:01:08 +0100
 
 openmediavault (0.2.7.2) stable; urgency=low
 
@@ -1101,7 +1101,7 @@ openmediavault (0.2.7.2) stable; urgency=low
   * Mantis 0000040: Can't change server name
   * Mantis 0000047: Change 'Shared Folder' into 'Shared Folders'
   * Mantis 0000048: Wrong graph title under System Information->System->Interfaces
-  * Mantis 0000049: OpenMediaVault don`t recognize kvm virtio disks
+  * Mantis 0000049: EnterpriSestorageBox don`t recognize kvm virtio disks
   * Mantis 0000051: raid10 level
   * Make gateway field in the interface configuration dialogs optional,
     see Mantis 0000034.
@@ -1124,4 +1124,4 @@ openmediavault (0.2.7.2) stable; urgency=low
 
   * Initial release
 
- -- Volker Theile <volker.theile@openmediavault.org>  Wed, 26 Aug 2009 21:50:06 +0200
+ -- Artur Osinski-Stachowicz <volker.theile@openmediavault.org>  Wed, 26 Aug 2009 21:50:06 +0200
